--- a/clean-uc3m-cookies.html
+++ b/clean-uc3m-cookies.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 <script type="text/javascript">
 function borrarCookiesPortalUc3m()
@@ -56,13 +56,13 @@ function getCookie( c_name )
           <div data-role="content">
             <center>
             <h1>Are you really sure you want to <br> remove the UC3M cookies? :-/</h1>
-            <img style="max-height:95vh;" src="/imagenes/cookie-monster.jpg">
+            <img style="max-height:95vh;" src="https://pbs.twimg.com/profile_images/552145045663408129/egywNuyx.png">
             </center>
           </div>
 
           <div data-role="footer">
             <center>
-            <a href="#" class="ui-btn ui-shadow ui-corner-all ui-btn-a" onclick="borrarCookiesPortalUc3m(); $('#panel3').popup('close'); return false;">Ok</a>
+            <a href="#" class="ui-btn ui-shadow ui-corner-all ui-btn-a" onclick="borrarCookiesPortalUc3m(); $('#panel3').popusp('close'); return false;">Ok</a>
             &nbsp;
             <a href="#main" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-b">Cancel</a>
             </center>
@@ -71,10 +71,5 @@ function getCookie( c_name )
 
 
 <a href="#" onclick="borrarCookiesPortalUc3m();">Borrar</a>
+<a href="#panel3" data-rel="popup"><h2>Clear Cookies</h2></a>
 
-
-          <ul data-role="listview" data-inset="true" data-mini="true">
-            <li><a href="#panel3" data-rel="popup">
-                <h2>Clear Cookies</h2></a>
-            </li>
-          </ul>
